# linear-regression-using-imgui-and-implot-and-reading-from-file-using-c-

./: CMakeLists.txt  imgui.ini  main.cpp  readme.md
